...
        )

        button.setImage(icon?.withRenderingMode(.alwaysTemplate), for: .normal)
        button.tintColor = Theme.Color.black
        button.backgroundColor = Theme.Color.white
        button.layer.cornerRadius = Theme.CornerRadius.extraSmall
        button.accessibilityIdentifier = "back_button"
        return button
    }()

    lazy var carouselControlStackView: UIStackView = {
        let stackView = UIStackView()
        stackView.translatesAutoresizingMaskIntoConstraints = false
...
