...
        cartNavigationController.tabBarItem.accessibilityIdentifier = "cart_tabBarItem"
        let cartCoordinator = CartCoordinator(navigationController: cartNavigationController)

        let profileNavigationController = UINavigationController()
        profileNavigationController.tabBarItem.image = UIImage(systemName: "person.crop.circle")
        profileNavigationController.tabBarItem.selectedImage = UIImage(systemName: "person.crop.circle.fill")
        profileNavigationController.tabBarItem.accessibilityIdentifier = "profile_tabBarItem"
        let profileCoordinator = ProfileCoordinator(navigationController: profileNavigationController)

        tabBarController.viewControllers = [
            homeNavigationController,
            searchNavigationController,
            cartNavigationController,
...
